# Allocator

./: CMakeLists.txt
.github/workflows/: allocator.yml
include/: allocator.h  allocator.hpp  vector.h  vector.hpp
src/: allocator.h  main.cpp
test/: CMakeLists.txt
test/src/: testSolution.cpp
